--- a/lib/Chess/Plisco.pod
+++ b/lib/Chess/Plisco.pod
@@ -572,6 +572,21 @@ L</moveEquivalent> for what is considered significant.
 Although, this is technically a class method you should keep in mind that 
 the redundant parts of the moves depend on the current position.
 
+=item B<moveCompress(MOVE)>
+
+Reduces a move to its significant part. The resulting integer is guaranteed
+to fit into 16 bits.  The compressed move can be used as an index into lookup
+tables.
+
+This method has been added in version 1.0.2.
+
+=item B<moveUncompress(MOVE)>
+
+Undoes what B<moveCompress()> has done. The resulting integer is not a complete
+move, but you can compare it to a complete move with B<moveEquivalent()>.
+
+This method has been added in version 1.0.2.
+
 =item B<moveFrom(MOVE)>
 
 Extracts the shift (0-63) of the starting square.
