--- a/Changes
+++ b/Changes
@@ -1,8 +1,11 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+
+v1.0.2. 2026-01-06
 	- improve time management
 	- fix issue https://github.com/gflohr/Chess-Plisco/issues/42
+	- re-write transposition table
 
 v1.0.0  2025-12-15
 This version introduces a lot of incompatible changes and will require
