--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
+
+v1.0.2  2026-01-06
+	- re-write the transposition table implementation
 	- improve time management
 	- fix issue https://github.com/gflohr/Chess-Plisco/issues/42
 
