--- a/Changes
+++ b/Changes
@@ -2,6 +2,10 @@ Revision history for Perl extension Chess-Plisco
 
 {{$NEXT}}
 
+v1.0.3  2026-02-04
+	- use Syzygy endgame tablebase during search
+	- improve aspiration window
+
 v1.0.2  2026-01-06
 	- re-write the transposition table implementation
 
